--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,6 +24,11 @@ android {
         }
         jniLibs.useLegacyPackaging true
     }
+    dependenciesInfo {
+        includeInApk true
+        includeInBundle true
+    }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
