--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,7 +4,10 @@ repositories {
     maven { url = 'https://maven.brott.dev/' }
 }
 
+
+
 dependencies {
+
     implementation 'org.firstinspires.ftc:Inspection:10.1.0'
     implementation 'org.firstinspires.ftc:Blocks:10.1.0'
     implementation 'org.firstinspires.ftc:RobotCore:10.1.0'
@@ -13,7 +16,11 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:10.1.0'
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.0'
     implementation 'org.firstinspires.ftc:Vision:10.1.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.15'
+
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
+
+
 }
 
