--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,6 +11,12 @@
 
 // Custom definitions may go here
 
+repositories {
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
+}
+
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
@@ -36,5 +42,4 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
