--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,7 +17,11 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.0'
     implementation 'org.firstinspires.ftc:Vision:10.1.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.15'
+
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
+    implementation "com.acmerobotics.roadrunner:core:1.0.0"
+    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
 
