2025 Worlds Final Programming

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,15 +11,22 @@
 
 // Custom definitions may go here
 
-repositories {
-    maven {
-        url = 'https://maven.brott.dev/'
-    }
-}
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//        maven {
+//            url = 'https://www.matthewo.tech/maven/'
+//        }
+//    }
+//    dependencies {
+//        classpath 'org.team11260:fast-load-plugin:0.1.2'
+//    }
+//}
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+//apply plugin: 'org.team11260.fast-load-plugin'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -37,6 +44,15 @@ android {
     buildToolsVersion '34.0.0'
 }
 
+repositories {
+//    maven {
+//        url = 'https://www.matthewo.tech/maven/'
+//    }
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
@@ -46,4 +62,5 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+//    implementation 'org.team11260:fast-load:0.1.2'
 }
